# deepthought

./: .clang-format  .gitignore  .gitlab-ci.bak.yml  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.legacy  README.md  README.txt  download_spice.sh  run.sh
.github/workflows/: c-cpp.yml  clang_format.yml
Database/: AcParmDump00.txt  AcParmDump01.txt
Demo/InOut/: Inp_FOV.yaml  Inp_Graphics.yaml  Inp_IPC.yaml  Inp_Region.yaml  Inp_Sim.yaml  Nodes_ThrDemo.yaml  Orb_67P.yaml  Orb_ARD.yaml  Orb_Cube.yaml  Orb_EOS.yaml  Orb_EarthEscape.yaml  Orb_Eccentric.yaml  Orb_Eros.yaml  Orb_GEO.yaml  Orb_HST.yaml  Orb_ISS.yaml  Orb_Insertion.yaml  Orb_Itokawa.yaml  Orb_Jupiter.yaml  Orb_L2Halo.yaml  Orb_LEO.yaml  Orb_LLO.yaml  Orb_MarsFlyby.yaml  Orb_ORX_Helio.yaml  Orb_Saturn.yaml  Orb_Wirtanen.yaml  SC_Aura.txt  SC_Aura.yaml  SC_BBM.yaml  SC_CMG.yaml  SC_Cubesat1U.yaml  SC_Cubesat3U.yaml  SC_Cubesat6U.yaml  SC_HST.yaml  SC_ISS.yaml  SC_IonCruiser.yaml  SC_LRO.yaml  SC_Moai.yaml  SC_Orion.yaml  SC_SensorFOV.yaml  (+5 more)
Development/ThreeBody/: cowell_jac_3body.py  encke_jac_3body.py  jacobians.c
Docs/: DSM_Manual.txt
Docs/Using Standalone AcApp/: Using Standalone AcApp.txt
Docs/yaml/: MissionsTxt2YAML.py  yamlTranslationParams.yaml
Docs/yaml/schema/: inp_dsm.schema.json  sc.schema.json
Docs/yaml/yamlComments/: InpDSM_comments.yaml
Include/: 42.h  42constants.h  42defines.h  42dsm.h  42gl.h  42glfw.h  42glut.h  42types.h  Ac.h  AcTypes.h  DSMTypes.h
Kit/: CMakeLists.txt
Kit/Include/: 42glfwkit.h  42glkit.h  42glutkit.h  dcmkit.h  docoptkit.h  dsmkit.h  envkit.h  fswkit.h  geomkit.h  glkit.h  gmseckit.h  iokit.h  jdkit.h  libfyaml.h  mathkit.h  msis86kit.h  navkit.h  orbkit.h  rationalkit.h  sigkit.h  sphkit.h  texkit.h  timekit.h
Kit/Source/: 42glfwkit.c  42glkit.c  42glutkit.c  dcmkit.c  docoptkit.c  dsmkit.c  envkit.c  fswkit.c  geomkit.c  glkit.c  gmseckit.c  iokit.c  jdkit.c  mathkit.c  msis86kit.c  navkit.c  nrlmsise00kit.c  orbkit.c  radbeltkit.c  rationalkit.c  sigkit.c  sphkit.c  texkit.c  timekit.c
Missions/DSM_DEMO/InOut/: Inp_Cmd.txt  Inp_DSM.txt  Inp_DSM.yaml  Inp_FOV.yaml  Inp_Graphics.yaml  Inp_IPC.yaml  Inp_NOS3.yaml  Inp_Region.yaml  Inp_Sim.yaml  Inp_TDRS.yaml  Nodes_Simple.yaml  Orb_SWARM.yaml  SC_SWARM_3U_0.txt  SC_SWARM_3U_0.yaml  SC_SWARM_3U_1.yaml  SC_SWARM_3U_2.yaml  SC_SWARM_3U_3.yaml  SC_SWARM_6U.yaml
Missions/DSM_DEMO/Model/: Cubesat_6U.mtl  observer.mtl
Missions/DSM_NAV_DEMO/InOut/: Inp_DSM.txt  Inp_DSM.yaml  Inp_Graphics.yaml  Inp_Sim.txt  Inp_Sim.yaml  SC_SWARM_3U_0.txt  SC_SWARM_3U_0.yaml  SC_SWARM_3U_1.txt  SC_SWARM_3U_1.yaml  SC_SWARM_3U_2.txt  SC_SWARM_3U_2.yaml  SC_SWARM_3U_3.txt  SC_SWARM_3U_3.yaml  SC_SWARM_6U.yaml
Missions/DSM_TESTS/InOut/: Inp_DSM.yaml  Inp_Graphics.yaml  Inp_Sim.yaml  SC_SWARM_3U_0.yaml  SC_SWARM_3U_1.yaml  SC_SWARM_3U_2.yaml  SC_SWARM_3U_3.yaml  SC_SWARM_6U.yaml
Missions/DSM_TESTS/Model/: rocket.mtl
Missions/Jupiter_Validation/InOut/: Inp_DSM.txt  Inp_Sim.txt  Orb_JupiterOrbit.txt  SC_12U_CubeSat.txt
Missions/NAV_TEST/InOut/: Inp_DSM.txt  Inp_DSM.yaml  Inp_Graphics.txt  Inp_Graphics.yaml  Inp_Sim.txt  Inp_Sim.yaml  Orb_SWARM.txt  Orb_SWARM.yaml  SC_SWARM_6U.txt  SC_SWARM_6U.yaml
Missions/SNOOPI/InOut/: Inp_AD.txt  Inp_ATS.txt  Inp_Cmd.txt  Inp_DI.txt  Inp_DO.txt  Inp_DSM.yaml  Inp_EPHM.txt  Inp_FOV.yaml  Inp_GNC.txt  Inp_Graphics.yaml  Inp_IPC.yaml  Inp_Sim.yaml  Nodes_Simple.yaml  Orb_Snoopi.yaml  SC_Snoopi-deployed-onebody.yaml  SC_Snoopi-stowed-onebody.txt  snoopi_datafilter_config.yaml
Missions/SNOOPI/Model/: ReadMe.md  snoopi_deployed.mtl  snoopi_deployed.wings
Missions/THREE_BODY_DEMO/InOut/: Inp_Sim.txt  Inp_Sim.yaml  Orb_SWARM.txt  Orb_SWARM.yaml  SC_SWARM_3U_0.yaml  SC_SWARM_3U_1.txt  SC_SWARM_3U_2.txt  SC_SWARM_6U.txt
Missions/THREE_BODY_DEMO/Model/: observer.mtl  observer.wings  rocket.mtl
Missions/enceladus_v1/835constellation/: Ephem_SC2_ICRF.txt  Ephem_SC3_VNB.txt  Ephem_SC7_RIC.txt  Ephem_SC8_RIC.txt  Ephem_mothership_VNB.txt
Missions/enceladus_v1/InOut/: Inp_Cmd.txt  Inp_DSM.txt  Inp_DSM.yaml  Inp_FOV.yaml  Inp_Graphics.yaml  Inp_NOS3.txt  Inp_Sim.txt  Inp_Sim.yaml  Nodes_Simple.yaml  Orb_000.yaml  Orb_001.yaml  Orb_002.yaml  Orb_003.yaml  Orb_004.yaml  Orb_005.yaml  Orb_006.yaml  Orb_007.yaml  Orb_008.yaml  SC_000.yaml  SC_001.yaml  SC_002.txt  SC_002.yaml  SC_003.yaml  SC_004.yaml  SC_005.yaml  SC_006.yaml  SC_007.yaml  SC_008.yaml  ephem_000.txt  ephem_001.txt  ephem_002.txt  ephem_003.txt  ephem_004.txt  ephem_005.txt  ephem_006.txt  ephem_007.txt  ephem_008.txt
Model/: 42.mtl  42_Watermark.ppm  42_WatermarkAlpha.ppm  Cannonball.mtl  Cubesat_12U.wings  Cubesat_16U.wings  EGM08.txt  MinorBodies.txt  SW_predict_MSAFE_95_50_Pred_Ap.txt  SolFlx0908_Schatten.txt  TumbleSat0.mtl  TumbleSat1.mtl  TwoSpheres.mtl  igrf13coeffs.txt  sol1_enceladus1.grv
Model/spice_kernels/: get_kernels.sh  kernels.tm  kernels.txt
Source/: 42actuators.c  42cmd.c  42dsm.c  42dynamics.c  42environs.c  42ephem.c  42exec.c  42fsw.c  42gl.c  42glfw.c  42glut.c  42gpgpu.c  42init.c  42ipc.c  42jitter.c  42joints.c  42main.c  42nos3.c  42optics.c  42perturb.c  42report.c  42sensors.c  AcApp.c
Source/IPC/: AppReadFromCmd.c  AppReadFromFile.c  AppReadFromSocket.c  SimReadFromCmd.c  SimReadFromFile.c  SimReadFromGmsec.c  SimReadFromSocket.c  SimReadFromSocketSensor.c  SimWriteToFile.c  SimWriteToGmsec.c  SimWriteToSocket.c
Standalone/InOut/: Inp_FOV.yaml  Inp_Graphics.yaml  Inp_IPC.yaml  Inp_Sim.yaml  Orb_LEO.yaml  SC_CfsSat0.yaml  SC_CfsSat1.yaml
Tests/: mathkit_tests.c  mathkit_tests.h  navkit_tests.c  navkit_tests.h  test_lib.c  test_lib.h  tests.c  tests.h
Tx/: Inp_FOV.txt  Inp_Sim.txt  SC_Simple.txt
Utilities/: MexMake.m  OctMake.m
World/: MercatorToCube.c
data_filter/: dataFilter.c  dataFilter.cpp  dataFilter.h  dataFilter.hpp
yaml/: MissionsTxt2YAML.py
yaml/schema/: inp_dsm.schema.json
yaml/yamlComments/: InpDSM_comments.yaml  InpGraphics_comments.yaml  InpNOS3_comments.yaml  InpSim_comments.yaml  Nodes_comments.yaml  Orb_comments.yaml  SC_comments.yaml
(+68 files in other folders)
